--- a/package.json
+++ b/package.json
@@ -52,40 +52,40 @@
     "ammo.js": "^0.0.10",
     "animejs": "^3.2.1",
     "raindrop-fx": "^1.0.8",
-    "three": "^0.141.0",
-    "three-mesh-bvh": "^0.5.11"
+    "three": "^0.142.0",
+    "three-mesh-bvh": "^0.5.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.2",
-    "@babel/plugin-proposal-export-namespace-from": "^7.17.12",
-    "@babel/plugin-transform-modules-commonjs": "^7.18.2",
-    "@sveltejs/vite-plugin-svelte": "1.0.0-next.47",
-    "@types/animejs": "^3.1.4",
+    "@babel/core": "^7.18.9",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "@sveltejs/vite-plugin-svelte": "1.0.1",
+    "@types/animejs": "^3.1.5",
     "@types/jest": "^27.5.1",
-    "@types/node": "^17.0.38",
-    "@types/three": "^0.141.0",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
+    "@types/node": "^18.0.6",
+    "@types/three": "^0.142.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "babel-jest": "^27.5.1",
-    "electron": "^19.0.1",
-    "electron-builder": "^23.0.3",
-    "eslint": "^8.16.0",
-    "fake-indexeddb": "^3.1.7",
+    "electron": "^19.0.9",
+    "electron-builder": "^23.1.0",
+    "eslint": "^8.20.0",
+    "fake-indexeddb": "^4.0.0",
     "jest": "^27.5.1",
     "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^27.5.1",
     "node-notifier": "^10.0.1",
     "postcss": "^8.4.14",
-    "postcss-html": "^1.4.1",
+    "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.4",
-    "sass": "^1.52.1",
-    "stylelint": "^14.8.5",
-    "stylelint-config-standard": "^25.0.0",
-    "svelte": "^3.48.0",
-    "svelte-preprocess": "^4.10.6",
+    "sass": "^1.54.0",
+    "stylelint": "^14.9.1",
+    "stylelint-config-standard": "^26.0.0",
+    "svelte": "^3.49.0",
+    "svelte-preprocess": "^4.10.7",
     "ts-jest": "^27.1.4",
-    "typescript": "^4.7.2",
-    "vite": "^2.9.9",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.2",
     "vite-plugin-glsl": "0.1.1"
   },
   "engines": {
