--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "setup": "node ./build/index.mjs",
     "start:web": "vite",
     "build:web": "vite build",
-    "serve:web": "node ./build/web.mjs",
+    "serve:web": "vite preview",
     "build:prod": "set prod=true&& vite build",
     "start:app": "pnpm build:app && pnpm build:dev",
     "build:app": "pnpm build:web && tsc --project app",
@@ -52,8 +52,8 @@
     "ammo.js": "^0.0.10",
     "animejs": "^3.2.1",
     "raindrop-fx": "^1.0.8",
-    "three": "^0.142.0",
-    "three-mesh-bvh": "^0.5.14"
+    "three": "^0.143.0",
+    "three-mesh-bvh": "^0.5.15"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
@@ -61,13 +61,13 @@
     "@babel/plugin-transform-modules-commonjs": "^7.18.6",
     "@sveltejs/vite-plugin-svelte": "1.0.1",
     "@types/animejs": "^3.1.5",
-    "@types/jest": "^27.5.1",
-    "@types/node": "^18.0.6",
-    "@types/three": "^0.142.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^18.6.2",
+    "@types/three": "^0.143.0",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "babel-jest": "^27.5.1",
-    "electron": "^19.0.9",
+    "electron": "^19.0.10",
     "electron-builder": "^23.1.0",
     "eslint": "^8.20.0",
     "fake-indexeddb": "^4.0.0",
@@ -83,9 +83,9 @@
     "stylelint-config-standard": "^26.0.0",
     "svelte": "^3.49.0",
     "svelte-preprocess": "^4.10.7",
-    "ts-jest": "^27.1.4",
+    "ts-jest": "^27.1.5",
     "typescript": "^4.7.4",
-    "vite": "^3.0.2",
+    "vite": "^3.0.3",
     "vite-plugin-glsl": "0.1.1"
   },
   "engines": {
