Update project structure

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,45 +1,47 @@
 {
   "scope": "./",
   "start_url": "./",
+
   "short_name": "YAZH",
   "display": "fullscreen",
   "author": "Ustym Ukhman",
+
   "orientation": "landscape",
   "name": "YetAnotherZombieHorror",
   "description": "Yet Another Zombie Horror",
+
+  "prefer_related_applications": false,
+  "background_color": "#000000",
+  "related_applications": [],
+  "theme_color": "#8A0707",
+
   "icons": [{
     "src": ".\/favicon\/android-icon-36x36.png",
-    "purpose": "any maskable",
     "type": "image\/png",
     "sizes": "36x36",
     "density": "0.75"
   }, {
     "src": ".\/favicon\/android-icon-48x48.png",
-    "purpose": "any maskable",
     "type": "image\/png",
     "sizes": "48x48",
     "density": "1.0"
   }, {
     "src": ".\/favicon\/android-icon-72x72.png",
-    "purpose": "any maskable",
     "type": "image\/png",
     "sizes": "72x72",
     "density": "1.5"
   }, {
     "src": ".\/favicon\/android-icon-96x96.png",
-    "purpose": "any maskable",
     "type": "image\/png",
     "sizes": "96x96",
     "density": "2.0"
   }, {
     "src": ".\/favicon\/android-icon-144x144.png",
-    "purpose": "any maskable",
     "type": "image\/png",
     "sizes": "144x144",
     "density": "3.0"
   }, {
-    "src": ".\/favicon\/android-icon-192x192.png",
-    "purpose": "any maskable",
+    "src": ".\/favicon\/favicon-192x192.png",
     "type": "image\/png",
     "sizes": "192x192",
     "density": "4.0"
@@ -48,10 +50,6 @@
     "purpose": "any maskable",
     "type": "image\/png",
     "sizes": "512x512",
-    "density": "5.0"
-  }],
-  "prefer_related_applications": false,
-  "background_color": "#000000",
-  "related_applications": [],
-  "theme_color": "#8A0707"
+    "density": "10.6"
+  }]
 }
