--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ pids
 
 .idea
 .vscode
+.DS_Store
 .lock-wscript
 
 dist/
@@ -25,4 +26,3 @@ public/**/*.glb
 
 public/assets/shaders/*
 !public/assets/sounds/YAZH.mp3
-.github/workflows/check-commit-message.yml
