--- a/.stylelintrc
+++ b/.stylelintrc
@@ -32,7 +32,9 @@
     }],
 
     "selector-pseudo-class-no-unknown": [true, {
-      "ignorePseudoClasses": ["global", "export"]
+      "ignorePseudoClasses": [
+        "global", "export"
+      ]
     }]
   }
 }
