--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "YetAnotherZombieHorror",
   "description": "Yet Another Zombie Horror",
-  "author": "Ustym Ukhman <ustym.ukhman@gmail.com>",
   "homepage": "https://github.com/UstymUkhman/YetAnotherZombieHorror#readme",
+  "author": "Ustym Ukhman <ustym.ukhman@gmail.com> (https://github.com/UstymUkhman/)",
+  "packageManager": "^pnpm@7.13.4",
   "main": "src/main.ts",
-  "version": "0.6.5",
+  "version": "0.7.0",
   "license": "MIT",
   "private": false,
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/UstymUkhman/YetAnotherZombieHorror.git"
@@ -41,52 +43,44 @@
     "build:dev": "set ENVIRONMENT=development&& electron build/app/main.js",
     "pack:app": "electron-builder --dir --config app/builder.yml",
     "dist:app": "electron-builder --config app/builder.yml",
-    "lint:js": "eslint src/**/*.{ts,tsx,js,jsx}",
+    "lint:js": "eslint src/**/*.{svelte,ts,js}",
     "lint:css": "stylelint **/*.{svelte,scss,css}",
-    "test:run": "jest --notify --silent",
-    "test:watch": "jest --watch --silent",
-    "test:cover": "pnpm test:run --coverage",
-    "test:clear": "jest --clearCache"
+    "test:cover": "vitest run --coverage",
+    "test:run": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "ammo.js": "^0.0.10",
     "animejs": "^3.2.1",
     "raindrop-fx": "^1.0.8",
-    "three": "^0.143.0",
-    "three-mesh-bvh": "^0.5.15"
+    "three": "^0.145.0",
+    "three-mesh-bvh": "^0.5.16"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.9",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
-    "@sveltejs/vite-plugin-svelte": "1.0.1",
+    "@sveltejs/vite-plugin-svelte": "1.0.9",
     "@types/animejs": "^3.1.5",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^18.6.2",
-    "@types/three": "^0.143.0",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "babel-jest": "^27.5.1",
-    "electron": "^19.0.10",
-    "electron-builder": "^23.1.0",
-    "eslint": "^8.20.0",
+    "@types/node": "^18.8.5",
+    "@types/three": "^0.144.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "electron": "^21.1.1",
+    "electron-builder": "^23.6.0",
+    "eslint": "^8.25.0",
     "fake-indexeddb": "^4.0.0",
-    "jest": "^27.5.1",
     "jest-canvas-mock": "^2.4.0",
-    "jest-environment-jsdom": "^27.5.1",
-    "node-notifier": "^10.0.1",
-    "postcss": "^8.4.14",
+    "jsdom": "^20.0.1",
+    "postcss": "^8.4.18",
     "postcss-html": "^1.5.0",
-    "postcss-scss": "^4.0.4",
-    "sass": "^1.54.0",
-    "stylelint": "^14.9.1",
-    "stylelint-config-standard": "^26.0.0",
-    "svelte": "^3.49.0",
+    "postcss-scss": "^4.0.5",
+    "sass": "^1.55.0",
+    "stylelint": "^14.13.0",
+    "stylelint-config-standard": "^28.0.0",
+    "svelte": "^3.51.0",
     "svelte-preprocess": "^4.10.7",
-    "ts-jest": "^27.1.5",
-    "typescript": "^4.7.4",
-    "vite": "^3.0.3",
-    "vite-plugin-glsl": "0.1.1"
+    "typescript": "^4.8.4",
+    "vite": "^3.1.8",
+    "vite-plugin-glsl": "0.5.1",
+    "vitest": "^0.24.3"
   },
   "engines": {
     "node": ">= 16.15.1",
