Add physics & shaders build scripts

--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,11 @@ node_modules/
 public/**/*.ico
 public/**/*.png
 public/**/*.jpg
-
 public/**/*.mp3
 public/**/*.glb
 
+!build/package.json
+!build/pnpm-lock.yaml
 public/assets/shaders/*
+!public/**/shaders/.gitkeep
 !public/assets/sounds/YAZH.mp3
