--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   ],
   "scripts": {
     "postinstall": "electron-builder install-app-deps",
-    "setup": "node ./build/index.mjs",
+    "setup": "cd build && pnpm i && cd..",
     "start:web": "vite",
     "build:web": "vite build",
     "serve:web": "vite preview",
@@ -58,11 +58,11 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "1.0.9",
-    "@types/animejs": "^3.1.5",
-    "@types/node": "^18.11.0",
+    "@types/animejs": "^3.1.6",
+    "@types/node": "^18.11.2",
     "@types/three": "^0.144.0",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "electron": "^21.1.1",
     "electron-builder": "^23.6.0",
     "eslint": "^8.25.0",
@@ -79,7 +79,7 @@
     "svelte-preprocess": "^4.10.7",
     "typescript": "^4.8.4",
     "vite": "^3.1.8",
-    "vite-plugin-glsl": "0.5.2",
+    "vite-plugin-glsl": "^0.5.2",
     "vitest": "^0.24.3"
   },
   "engines": {
