--- a/app/builder.yml
+++ b/app/builder.yml
@@ -14,11 +14,11 @@ files:
 
 directories:
   output: build
-  buildResources: dist/favicon
+  buildResources: dist/favicons
 
 win:
   legalTrademarks: Copyright © 2019 - 2022 Ustym Ukhman
-  icon: dist/favicon/favicon-512x512.png
+  icon: dist/favicons/favicon-512x512.png
   publisherName: Ustym Ukhman
 
   target:
@@ -36,7 +36,7 @@ win:
         - ia32
 
 linux:
-  icon: dist/favicon/favicon-512x512.png
+  icon: dist/favicons/favicon-512x512.png
   maintainer: Ustym Ukhman
   category: game
 
