--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,7 @@
   "prefer_related_applications": false,
   "background_color": "#000000",
   "related_applications": [],
-  "theme_color": "#8A0707",
+  "theme_color": "#000000",
 
   "icons": [{
     "src": ".\/favicons\/android-icon-36x36.png",
