--- a/.stylelintrc
+++ b/.stylelintrc
@@ -4,26 +4,11 @@
   "extends": "stylelint-config-standard",
 
   "overrides": [{
-    "files": ["**/*.svelte"],
-    "customSyntax": "postcss-html"
+    "customSyntax": "postcss-html",
+    "files": ["**/*.svelte"]
   }],
 
   "rules": {
-    "no-invalid-position-at-import-rule": null,
-    "block-closing-brace-newline-after": null,
-    "declaration-empty-line-before": null,
-    "selector-no-qualifying-type": null,
-    "function-comma-space-after": null,
-    "comment-empty-line-before": null,
-    "at-rule-empty-line-before": null,
-    "number-no-trailing-zeros": null,
-    "color-function-notation": null,
-    "rule-empty-line-before": null,
-    "length-zero-no-unit": null,
-    "function-name-case": null,
-    "color-hex-length": null,
-    "max-nesting-depth": 3,
-
     "at-rule-no-unknown": [true, {
       "ignoreAtRules": [
         "at-root", "include", "use", "mixin", "function",
@@ -32,9 +17,24 @@
     }],
 
     "selector-pseudo-class-no-unknown": [true, {
-      "ignorePseudoClasses": [
-        "global", "export"
-      ]
-    }]
+      "ignorePseudoClasses": ["global", "export"]
+    }],
+
+    "no-invalid-position-at-import-rule": null,
+    "block-closing-brace-newline-after": null,
+    "declaration-empty-line-before": null,
+    "selector-no-qualifying-type": null,
+    "function-comma-space-after": null,
+    "comment-empty-line-before": null,
+    "at-rule-empty-line-before": null,
+
+    "number-no-trailing-zeros": null,
+    "color-function-notation": null,
+    "rule-empty-line-before": null,
+    "length-zero-no-unit": null,
+    "function-name-case": null,
+    "color-hex-length": null,
+    "import-notation": null,
+    "max-nesting-depth": 3
   }
 }
