--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "electron": "^21.1.1",
     "electron-builder": "^23.6.0",
     "eslint": "^8.25.0",
+    "eslint-plugin-svelte3": "^4.0.0",
     "fake-indexeddb": "^4.0.0",
     "jest-canvas-mock": "^2.4.0",
     "jsdom": "^20.0.1",
