--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "description": "Yet Another Zombie Horror",
   "homepage": "https://github.com/UstymUkhman/YetAnotherZombieHorror#readme",
   "author": "Ustym Ukhman <ustym.ukhman@gmail.com> (https://github.com/UstymUkhman/)",
-  "packageManager": "^pnpm@7.25.0",
+  "packageManager": "^pnpm@8.4.0",
   "main": "src/main.ts",
-  "version": "0.7.0",
+  "version": "0.7.5",
   "license": "MIT",
   "private": false,
   "type": "module",
@@ -43,48 +43,41 @@
     "build:dev": "set ENVIRONMENT=development&& electron build/app/main.js",
     "pack:app": "electron-builder --dir --config app/builder.yml",
     "dist:app": "electron-builder --config app/builder.yml",
-    "lint:js": "eslint src/**/*.{svelte,ts,js}",
     "lint:css": "stylelint **/*.{svelte,scss,css}",
-    "test:cover": "vitest run --coverage",
-    "test:run": "vitest run",
-    "test:watch": "vitest"
+    "lint:js": "eslint src/**/*.{svelte,ts,js}"
   },
   "dependencies": {
     "ammo.js": "^0.0.10",
     "animejs": "^3.2.1",
     "raindrop-fx": "^1.0.8",
-    "three": "^0.148.0",
-    "three-mesh-bvh": "^0.5.21"
+    "three": "^0.152.2",
+    "three-mesh-bvh": "^0.5.23"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "2.0.2",
-    "@types/animejs": "^3.1.6",
-    "@types/node": "^18.11.18",
-    "@types/three": "^0.148.0",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
-    "electron": "^22.0.0",
+    "@sveltejs/vite-plugin-svelte": "2.2.0",
+    "@types/animejs": "^3.1.7",
+    "@types/node": "^20.1.1",
+    "@types/three": "^0.152.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "electron": "^24.2.0",
     "electron-builder": "^23.6.0",
-    "eslint": "^8.31.0",
+    "eslint": "^8.40.0",
     "eslint-plugin-svelte3": "^4.0.0",
-    "fake-indexeddb": "^4.0.1",
-    "jest-canvas-mock": "^2.4.0",
-    "jsdom": "^21.0.0",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.23",
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.6",
-    "sass": "^1.57.1",
-    "stylelint": "^14.16.1",
-    "stylelint-config-standard": "^29.0.0",
-    "svelte": "^3.55.0",
-    "svelte-preprocess": "^5.0.0",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.4",
-    "vite-plugin-glsl": "^1.0.2",
-    "vitest": "^0.26.3"
+    "sass": "^1.62.1",
+    "stylelint": "^15.6.1",
+    "stylelint-config-standard": "^33.0.0",
+    "svelte": "^3.59.1",
+    "svelte-preprocess": "^5.0.3",
+    "typescript": "^5.0.4",
+    "vite": "^4.3.5",
+    "vite-plugin-glsl": "^1.1.2"
   },
   "engines": {
     "node": ">= 18.12.1",
-    "npm": ">= 9.2.0"
+    "pnpm": ">= 8.4.0"
   }
 }
