Update utils according to boilerplate
Add function utils
Improve global types declarations
Replace custom colors with enum everywhere

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "types": ["vite/client", "svelte", "node"],
     "forceConsistentCasingInFileNames": true,
+    "types": ["node", "./src/global.d.ts"],
     "allowSyntheticDefaultImports": true,
     "typeRoots": ["node_modules/@types"],
 
