--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "YetAnotherZombieHorror",
   "description": "Yet Another Zombie Horror",
   "homepage": "https://github.com/UstymUkhman/YetAnotherZombieHorror#readme",
-  "author": "Ustym Ukhman <ustym.ukhman@gmail.com> (https://github.com/UstymUkhman/)",
   "packageManager": "^pnpm@8.4.0",
   "main": "src/main.ts",
   "version": "0.7.5",
@@ -17,14 +16,27 @@
     "url": "https://github.com/UstymUkhman/YetAnotherZombieHorror/issues",
     "email": "ustym.ukhman@gmail.com"
   },
+  "author": {
+    "name": "Ustym Ukhman",
+    "email": "ustym.ukhman@gmail.com",
+    "url": "https://github.com/UstymUkhman/"
+  },
   "keywords": [
     "fps",
     "tps",
     "game",
+    "webgl",
+    "webgl2",
+    "ammojs",
+    "svelte",
     "horror",
+    "threejs",
     "zombies",
     "shooter",
     "survival",
+    "electron",
+    "typescript",
+    "horror-game",
     "survival-horror",
     "survival-shooter",
     "first-person-shooter",
@@ -51,29 +63,29 @@
     "animejs": "^3.2.1",
     "raindrop-fx": "^1.0.8",
     "three": "^0.152.2",
-    "three-mesh-bvh": "^0.5.23"
+    "three-mesh-bvh": "^0.6.0"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "2.2.0",
+    "@sveltejs/vite-plugin-svelte": "2.3.0",
     "@types/animejs": "^3.1.7",
-    "@types/node": "^20.1.1",
+    "@types/node": "^20.2.3",
     "@types/three": "^0.152.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.5",
-    "electron": "^24.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "electron": "^24.4.0",
     "electron-builder": "^23.6.0",
-    "eslint": "^8.40.0",
+    "eslint": "^8.41.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "postcss": "^8.4.23",
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.6",
     "sass": "^1.62.1",
-    "stylelint": "^15.6.1",
+    "stylelint": "^15.6.2",
     "stylelint-config-standard": "^33.0.0",
     "svelte": "^3.59.1",
     "svelte-preprocess": "^5.0.3",
     "typescript": "^5.0.4",
-    "vite": "^4.3.5",
+    "vite": "^4.3.8",
     "vite-plugin-glsl": "^1.1.2"
   },
   "engines": {
