Update project version
Create gameplay video link
Upgrade manager version
Add thumbnail preview

--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,6 @@ public/**/*.glb
 !build/package.json
 !build/pnpm-lock.yaml
 public/assets/shaders/*
+!public/**/thumbnail.jpg
 !public/**/shaders/.gitkeep
 !public/assets/sounds/YAZH.mp3
